--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHRC_TOKEN }}
+          password: ${{ github.token }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -39,5 +39,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            jamtur01/animal-farm-nodejs:latest
-            ghcr.io/jamtur01/animal-farm-nodejs:latest
+            missero/animal-farm-nodejs:latest
+            ghcr.io/missero/animal-farm-nodejs:latest
